force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Scrumforce_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrumforce_ID__c</fullName>
    <externalId>true</externalId>
    <label>Scrumforce ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>