force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Security__c.field-meta.xml
<CustomField>
    <fullName>agf__Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security</label>
    <type>Checkbox</type>
</CustomField>