force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Senior_Management_POC__c.field-meta.xml
<CustomField>
    <fullName>agf__Senior_Management_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who gets engaged when an escalation of the current investigation occurs</description>
    <inlineHelpText>The person who gets engaged when an escalation of the current investigation occurs</inlineHelpText>
    <label>Senior Management POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work5</relationshipName>
    <type>Lookup</type>
</CustomField>