force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Solution_Overview__c.field-meta.xml
<CustomField>
    <fullName>agf__Solution_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Overview</label>
    <referenceTo>agf__ADM_Solution_Overview__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>