force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Sprint__c.field-meta.xml
<CustomField>
    <fullName>agf__Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>agf__ADM_Sprint__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>