force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Sprint_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Sprint_Name__c</fullName>
    <formula>agf__Sprint__r.Name</formula>
    <label>Sprint Name</label>
    <type>Text</type>
</CustomField>