force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Sprint_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>agf__Sprint_Timeframe__c</fullName>
    <description>The first 8 characters of the sprint name</description>
    <formula>trim(LEFT(agf__Sprint__r.Name,8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint Timeframe YYYY.MMx</label>
    <type>Text</type>
</CustomField>