force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Story_Points__c.field-meta.xml
<CustomField>
    <fullName>agf__Story_Points__c</fullName>
    <label>Story Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>