force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Story_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Story_Status__c</fullName>
    <formula>IF( ISNULL(agf__Closed_On__c) , &quot;Open&quot;, &quot;Closed&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Story Status</label>
    <type>Text</type>
</CustomField>