force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Subscribe_to_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Subscribe_to_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribe to Work</label>
    <type>Checkbox</type>
</CustomField>