force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__System_Test_Engineer__c.field-meta.xml
<CustomField>
    <fullName>agf__System_Test_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>System_Test_Engineer</relationshipName>
    <type>Lookup</type>
</CustomField>