force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Target_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Target_Build__c</fullName>
    <label>Target Build</label>
    <length>64</length>
    <type>Text</type>
</CustomField>