force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Tech_Writer__c.field-meta.xml
<CustomField>
    <fullName>agf__Tech_Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tech_Writer</relationshipName>
    <type>Lookup</type>
</CustomField>