force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Template_Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Template_Description__c</fullName>
    <label>Template Description</label>
    <type>TextArea</type>
</CustomField>