force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Template_Name__c</fullName>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>