force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Test_Failure_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Failure_Status__c</fullName>
    <label>Test Failure Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocking</fullName>
            </value>
            <value>
                <fullName>Signed Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>