force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Test_Plan__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Plan</label>
    <referenceTo>agf__QA_Test_Plan__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>