force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Theme_Rank__c.field-meta.xml
<CustomField>
    <fullName>agf__Theme_Rank__c</fullName>
    <label>Rank of work item for team in a theme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>