force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Total_Age_When_Closed__c.field-meta.xml
<CustomField>
    <fullName>agf__Total_Age_When_Closed__c</fullName>
    <formula>IF(ISBLANK(agf__Closed_On__c), 0, IF( agf__Created_On_Date__c &gt; DATEVALUE(agf__Closed_On__c), 0, DATEVALUE(agf__Closed_On__c) - agf__Created_On_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Age When Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>