force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Type_Value__c.field-meta.xml
<CustomField>
    <fullName>agf__Type_Value__c</fullName>
    <formula>CASE(agf__Type__c, &quot;Test Failure&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>