force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Use_Prioritizer__c.field-meta.xml
<CustomField>
    <fullName>agf__Use_Prioritizer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine whether or not a work record should be shown on the Work Prioritizer page</description>
    <inlineHelpText>Used to determine whether or not a work record should be shown on the Work Prioritizer page</inlineHelpText>
    <label>Include in Prioritize View</label>
    <type>Checkbox</type>
</CustomField>