force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__User_Profile_of_the_Creator__c.field-meta.xml
<CustomField>
    <fullName>agf__User_Profile_of_the_Creator__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <label>User Profile of the Creator</label>
    <type>Text</type>
</CustomField>