force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__User_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__User_Type__c</fullName>
    <label>User Type (As a...)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>