force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__WorkId_and_Subject__c.field-meta.xml
<CustomField>
    <fullName>agf__WorkId_and_Subject__c</fullName>
    <description>Concatenation of WorkId and Subject</description>
    <formula>Name &amp; &apos;: &apos; &amp; agf__Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenation of WorkId and Subject</inlineHelpText>
    <label>WorkId and Subject</label>
    <type>Text</type>
</CustomField>