force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/recordTypes/agf__Bug.recordType-meta.xml
<RecordType>
    <fullName>agf__Bug</fullName>
    <active>true</active>
    <description>Used to track defects or problems</description>
    <label>Bug</label>
</RecordType>