force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/recordTypes/agf__Investigation.recordType-meta.xml
<RecordType>
    <fullName>agf__Investigation</fullName>
    <active>true</active>
    <description>Used to request R&amp;D triage/diagnosis support for a customer support escalation</description>
    <label>Investigation</label>
</RecordType>