force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/recordTypes/agf__Template.recordType-meta.xml
<RecordType>
    <fullName>agf__Template</fullName>
    <active>true</active>
    <description>Used to store common values which can then be applied to new Bugs</description>
    <label>Template</label>
</RecordType>