force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/validationRules/agf__ValidateAssigneeOnPeforceStatusOpen.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__ValidateAssigneeOnPeforceStatusOpen</fullName>
    <active>true</active>
    <description>Make sure there is an assignee designated if the source control status is changed to either open or open once.</description>
    <errorConditionFormula>AND(CASE( agf__Perforce_Status__c,
     &quot;Approved - Open&quot;, 1,
     &quot;Approved - Open Once&quot;, 1,
     0) = 1,agf__Assignee__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>agf__Perforce_Status__c</errorDisplayField>
    <errorMessage>An assignee must be specified if the source control status is changed to Approved - Open or Approved - Open Once</errorMessage>
</ValidationRule>