force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/validationRules/agf__ValidateQAEngineerWithStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__ValidateQAEngineerWithStatus</fullName>
    <active>true</active>
    <description>QA Engineer field should be populated with Status is set to fixed</description>
    <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Fixed&quot;, 1,
0) = 1, agf__QA_Engineer__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>agf__QA_Engineer__c</errorDisplayField>
    <errorMessage>A QA Engineer must be specified if the Status is set to Fixed</errorMessage>
</ValidationRule>