force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/validationRules/agf__ValidateResolvedByWithStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__ValidateResolvedByWithStatus</fullName>
    <active>false</active>
    <description>Resolved_By__c field should not be populated if the Status indicates the the work record is still unresolved</description>
    <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;New&quot;, 1,
&quot;In Progress&quot;, 1,
0) = 1, agf__Resolved_By__c != &quot;&quot;)</errorConditionFormula>
    <errorMessage>Please update the Status__c field to something other than New or In Progress before populating the Resolved_By__c field.</errorMessage>
</ValidationRule>