force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/validationRules/agf__ValidateScheduledBuildWithStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__ValidateScheduledBuildWithStatus</fullName>
    <active>false</active>
    <description>Scheduled Build field should be populated with Status is set to fixed</description>
    <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Fixed&quot;, 1,
0) = 1, agf__Scheduled_Build__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>agf__Scheduled_Build__c</errorDisplayField>
    <errorMessage>A Scheduled Build must be specified if the Status is set to Fixed</errorMessage>
</ValidationRule>